# technical-analysis-assistant

./: .env.example  .gitignore  AUDIT_REPORT_20260606.md  CLAUDE.md  FLOW_COMPARISON.md  INTERACTION_DESIGN.md  README.md  USER_GUIDE.md  _ocr_book.py  _reextract_trading_excerpt.py  _repair_skill_triggers.py  _upload_ocr_to_feishu.py  api.py  pyproject.toml  requirements.txt
.claude/skills/technical-analysis-assistant/: SKILL.md
.claude/skills/technical-analysis-core/: SKILL.md
.claude/skills/technical-analysis-core/references/: chart-patterns.md  event-inference.md  indicators.md  market-behavior.md  scoring-framework.md  (+2 more)
.github/workflows/: ci.yml
data/: indicator_registry.json  reflection_report_603773.md  sample_aapl_daily.csv  skill_rules.jsonl  skill_rules.jsonl.bak_20260720  skill_rules_index.json
data/reports/: 300502_vs_600183_20260721.md
docs/: SKILL_EXTRACTION_GUIDE.md  system-architecture.md
tests/: test_bugfix_regression.py  test_evolution_engine.py  test_feedback_loop.py  test_feishu_integration.py  test_fixes.py  test_indicator_math.py  test_input_adapter.py  test_integration.py  test_regime_and_cache.py  test_report_generator.py  test_skill_extraction.py  test_technical_analyzer.py
utils/: __init__.py  auto_validator.py  console.py  data_source.py  deterministic_pipeline.py  evolution_engine.py  feature_extractor.py  feedback_loop.py  feishu_integration.py  input_adapter.py  llm_client.py  market_regime.py  portfolio.py  position_sizer.py  report_generator.py  rule_index.py  skill_knowledge.py  skill_matcher.py  technical_analyzer.py  tracking_module.py  trade_planner.py
utils/tech_calculator/: __init__.py  levels.py  momentum.py  pattern.py  registry.py  trend.py  volatility.py  volume.py
